# tkspace

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: python-publish.yaml
_modules/: index.html
_modules/tkspace/: utilities.html
_modules/tkspace/inversion_methods/: cost_functions.html  gradient_descent.html  guess.html
_modules/tkspace/plotting/: param_comp.html
_sources/: index.rst.txt
_sources/reference/: forward_models.onedim.cases.rst.txt  forward_models.onedim.loadcase.rst.txt  index.rst.txt  inversion_methods.cost_functions.rst.txt  utilities.rst.txt
_sources/user_guide/inverse/: inverse.rst.txt
about/: index.html
developers_guide/: index.html
docs/: requirements.txt
docs/source/: conf.py
docs/source/about/: index.rst
docs/source/developers_guide/: index.rst
docs/source/reference/: forward_models.onedim.flow.rst  forward_models.onedim.fm_utilities.rst  forward_models.onedim.rst  forward_models.onedim.sampling.rst  forward_models.onedim.velocity.rst  forward_models.rst  index.rst  inversion.cost_functions.rst  inversion.gradient_descent.rst  inversion.guess.rst  inversion.rst  inversion_methods.gradient_descent.rst  inversion_methods.guess.rst  inversion_methods.rst  (+18 more)
examples/: case11_guess1_0snr_0.00005step_2Dt_10000maxiter.py  case3_guess1_0snr_0.00005step_6Dt_10000maxiter.py  case6_guess1_15snr_0.00005step_2Dt_10000maxiter.py
reference/: README.html  forward_models.html  forward_models.onedim.cases.html  forward_models.onedim.flow.html  forward_models.onedim.fm_utilities.html  forward_models.onedim.html  forward_models.onedim.loadcase.html  forward_models.onedim.sampling.html  forward_models.onedim.velocity.html  index.html  inversion_methods.cost_functions.html  inversion_methods.gradient_descent.html  inversion_methods.guess.html  inversion_methods.html  plotting.html  plotting.param_comp.html  utilities.html
src/tkspace/: README.md  __init__.py  utilities.py
tutorials/: index.html
user_guide/: index.html  installation.html
user_guide/forward/: forward.html  index.html
user_guide/inverse/: index.html  inverse.html
(+39 files in other folders)
