# https://python-poetry.org/docs/pyproject
# minimal required information

[project]
name = "tkspace"
version = "0.1.0"
dependencies = [ 
  "numpy",
  "matplotlib",
  "scipy",
  "sigfig",
  "time",
  "copy",
  "skimage",
]

# optional information

description = "Spatiotemporal tracer kinetics modelling and inverse approaches for DCE-MRI"
readme = "README.md"
authors = [
  { name = "Eve Shalom", email = "pyess@leeds.ac.uk" }, 
  ]
license = { file = "LICENSE" }
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 3 - Alpha',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Operating System :: OS Independent',

  'License :: OSI Approved :: Apache Software License',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
keywords = ['python', "medical imaging", "perfusion", "MRI"]

requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/EShalom/tkspace"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
tests = [
  "pytest",
  "matplotlib",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser", 
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-remove-toctrees",
    "autodocsumm",
    "docutils",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
]







