[metadata]
name = TKfunctions_pyess
version = 0.0.1
author = Eve Shalom
author_email = pyess@leeds.ac.uk
description = Forward models and inversion method for tracer kinetic recovery.
long_description = file: README.md
long_description_content_type = text/markdown

Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
